# smart-finances

./: .gitignore  README.md  apis.py  caller.py  helpers.py  process.py  pyproject.toml  requirements.txt
src/: __init__.py  accounts.py  apis.py  app.py  caller.py  database.py  expenses.py  helpers.py  process.py
tests/: test_apis.py  test_database.py  test_helpers.py
