[tool.poetry]
name = "smart-finances"
version = "0.1.0"
description = "Aggregate data from various expense and investment APIs to see all your finances succinctly."
authors = ["Abhishek Ambekar <a-ambekar@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "smart_finances"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyyaml = "^6.0"
requests = "^2.28.2"
pytest = "^7.3.1"
sqlalchemy = "^2.0.15"
pytest-mock = "^3.10.0"
pytest-benchmark = "^4.0.0"
dash = "^2.11.1"
dash-bootstrap-components = "^1.4.2"
dash-bootstrap-templates = "^1.0.8"
pylint = "^2.17.5"
dash-auth = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
