[project]
name = "smart-finances"
version = "0.1.0"
description = "Aggregate data from various expense and investment APIs to see all your finances succinctly."
authors = ["Abhishek Ambekar <a-ambekar@hotmail.co.uk>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-auth>=2.3.0",
    "dash-bootstrap-components>=2.0.3",
    "dash-bootstrap-templates>=2.1.0",
    "mypy>=1.16.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]
